# robot

./: .gitignore  README.md
config/: hub.env.template
dashboard/: Cargo.toml
docs/: OpenClaw.md  bot-hub-control-plane-detailed-design.md  (+8 more)
hub/backend/: .env.example  .env.template  README.md  pyproject.toml
hub/backend/src/control_plane/: __init__.py  app.py  config.py
hub/backend/src/control_plane/adapters/: __init__.py  trader.py
hub/backend/src/control_plane/api/: public.py
hub/backend/src/control_plane/models/: __init__.py  schemas.py
hub/backend/src/control_plane/services/: auth.py  messenger.py  robots.py
hub/backend/src/hub/: app.py  config.py
hub/backend/src/hub/adapters/: __init__.py  base.py  factory.py  messenger.py  trader.py
hub/backend/src/hub/api/: public.py
hub/backend/src/hub/models/: __init__.py  schemas.py
hub/backend/src/hub/services/: __init__.py  auth.py  messenger.py  robots.py
hub/backend/tests/: test_auth_service.py  test_public_auth_api.py  test_trader_adapter.py
robots/trader/: README.md  SKILL.md  pyproject.toml
robots/trader/config/: strategies.example.yaml  trader.env.template
robots/trader/docs/: runbook.md
robots/trader/scripts/: bootstrap.sh  run_once.sh  start_bot.sh  status_bot.sh  stop_bot.sh
robots/trader/src/: __init__.py  config.py  scheduler.py  state_store.py
robots/trader/src/audit/: logger.py
robots/trader/src/brokers/: base.py  paper.py
robots/trader/src/data/: __init__.py  ifind_client.py
robots/trader/src/execution/: __init__.py
robots/trader/src/strategies/: base.py  breakout.py
(+205 files in other folders)
