[project]
name = "robot-hub"
version = "0.1.0"
description = "Python control plane for the robot hub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "pyyaml>=6.0.2,<7.0.0",
]

[project.scripts]
robot-hub = "hub.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
